--- a/scripts/test_submission/configs/09_advanced_preferences/forcedChoice_Random_4.yaml
+++ b/scripts/test_submission/configs/09_advanced_preferences/forcedChoice_Random_4.yaml
@@ -26,19 +26,19 @@ arenas:
       - !RGB {r: 200, g: 200, b: 200}
     - !Item
       name: Agent
-      positions: 
+      positions:
       - !Vector3 {x: 20, y: .5, z: 20}
       rotations: [0]
-      # Goals, should be placed on positions [10, 10], [10, 30], [30, 10], [30, 30]
     - !Item
-      name: GoodGoal
-      positions: 
-      - !Vector3 {x: 10, y: 0, z: 10}
+      name: GoodGoalMulti
       sizes:
       - !Vector3 {x: 1, y: 1, z: 1}
+      - !Vector3 {x: 2, y: 2, z: 2}
+      - !Vector3 {x: 4, y: 4, z: 4}
     - !Item
       name: BadGoal
-      positions: 
-      - !Vector3 {x: 30, y: 0, z: 10}
       sizes:
+      - !Vector3 {x: 1, y: 1, z: 1}
+      - !Vector3 {x: 1, y: 1, z: 1}
+      - !Vector3 {x: 1, y: 1, z: 1}
       - !Vector3 {x: 1, y: 1, z: 1}
