--- a/scripts/test_submission/test_config.yaml
+++ b/scripts/test_submission/test_config.yaml
@@ -707,3 +707,6 @@
   Food_on_top_of_movable_3.yaml:
     threshold: 0
     n_tests: 2
+  Goal_on_platform_1.yaml:
+    threshold: 0
+    n_tests: 2
