--- a/environment.yml
+++ b/environment.yml
@@ -86,7 +86,6 @@ dependencies:
   - markupsafe=1.1.1=py36h14c3975_0
   - matplotlib=3.1.0=py36_0
   - matplotlib-base=3.1.0=py36h5f35d83_0
-  - mccabe=0.6.1=py_1
   - mistune=0.8.4=py36h14c3975_1000
   - mock=3.0.5=py36_0
   - more-itertools=7.1.0=py_0
@@ -110,21 +109,17 @@ dependencies:
   - pickleshare=0.7.5=py36_1000
   - pip=19.2.1=py36_0
   - pixman=0.38.0=h516909a_1003
-  - pluggy=0.12.0=py_0
   - prometheus_client=0.7.1=py_0
   - prompt_toolkit=2.0.9=py_0
   - pthread-stubs=0.4=h14c3975_1001
   - ptyprocess=0.6.0=py_1001
   - py=1.8.0=py_0
-  - pycodestyle=2.5.0=py_0
   - pygments=2.4.2=py_0
   - pylint=2.3.1=py36_0
   - pyparsing=2.4.1.1=py_0
   - pyqt=5.9.2=py36hcca6a23_0
   - pyrsistent=0.15.3=py36h516909a_0
-  - pytest=5.0.1=py36_1
   - python=3.6.7=h357f687_1005
-  - python-dateutil=2.8.0=py_0
   - pytz=2019.1=py_0
   - pyzmq=18.0.2=py36h1768529_2
   - qt=5.9.7=h52cfd70_2
@@ -175,18 +170,60 @@ dependencies:
   - zlib=1.2.11=h516909a_1005
   - zstd=1.4.0=h3b9ef0a_0
   - pip:
+    - aspy-yaml==1.3.0
     - astor==0.8.0
     - atari-py==0.2.6
+    - beautifulsoup4==4.7.1
+    - beautifultable==0.7.0
+    - boto==2.49.0
+    - boto3==1.9.88
+    - botocore==1.12.116
+    - cfgv==2.0.1
+    - chardet==3.0.4
+    - click==6.7
     - cloudpickle==1.2.1
+    - cookies==2.2.1
+    - coverage==4.5.1
+    - coveralls==1.3.0
     - cycler==0.10.0
+    - docker==3.6.0
+    - docker-pycreds==0.4.0
+    - docopt==0.6.2
+    - docutils==0.15.1
+    - evalai==1.3.0
+    - flake8==3.0.4
     - future==0.17.1
     - gin-config==0.2.0
     - grpcio==1.11.1
     - gym==0.13.1
+    - identify==1.4.5
+    - idna==2.7
+    - importlib-resources==1.0.2
+    - jmespath==0.9.4
     - jsonpickle==1.2
+    - lxml==4.2.1
+    - mccabe==0.5.3
+    - nodeenv==1.3.3
     - opencv-python==4.1.0.25
     - pillow==5.4.1
+    - pluggy==0.6.0
+    - pre-commit==1.14.4
     - protobuf==3.6.1
+    - pycodestyle==2.0.0
+    - pyflakes==1.2.3
     - pyglet==1.3.2
+    - pytest==3.5.1
+    - pytest-cov==2.5.1
+    - python-dateutil==2.7.3
+    - requests==2.20.0
+    - requests-toolbelt==0.8.0
+    - responses==0.9.0
+    - s3transfer==0.1.13
+    - soupsieve==1.9.2
+    - toml==0.10.0
+    - urllib3==1.24.3
+    - validators==0.12.2
+    - virtualenv==16.7.2
+    - websocket-client==0.56.0
 prefix: /home/guillermo/miniconda3/envs/animal
 
