Added another configuration with just one goal

--- a/data/env_configs/train_006/1_good_goal_multi.yaml
+++ b/data/env_configs/train_006/1_good_goal_multi.yaml
@@ -5,7 +5,7 @@ arenas:
     items:
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
     - !Item
       name: BadGoal
       rotations: [-1, -1, -1, -1]
@@ -29,7 +29,7 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 20}
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
     - !Item
       name: BadGoal
       rotations: [-1, -1, -1, -1]
@@ -63,7 +63,7 @@ arenas:
       rotations: [0, 0, 0, 0]
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
     - !Item
       name: BadGoal
       rotations: [-1, -1, -1, -1]
@@ -94,7 +94,7 @@ arenas:
       rotations: [0, 0, 0]
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
     - !Item
       name: BadGoal
       rotations: [-1, -1, -1, -1]
@@ -125,7 +125,7 @@ arenas:
       rotations: [0, 0, 0]
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
     - !Item
       name: BadGoal
       rotations: [-1, -1, -1, -1]
@@ -156,7 +156,7 @@ arenas:
       rotations: [0, 0, 0]
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
     - !Item
       name: BadGoal
       rotations: [-1, -1, -1, -1]
@@ -193,7 +193,7 @@ arenas:
       rotations: [0, 0, 0, 0, 0]
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
     - !Item
       name: BadGoal
       rotations: [-1, -1, -1, -1]
@@ -224,7 +224,7 @@ arenas:
       rotations: [0, 0, 0]
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
     - !Item
       name: BadGoal
       rotations: [-1, -1, -1, -1]
@@ -250,10 +250,9 @@ arenas:
       - !Vector3 {x: 2, y: 0, z: -1}
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
       positions:
-      - !Vector3 {x: -1, y: 0, z: 2}
-      - !Vector3 {x: -1, y: 0, z: 38}
+      - !Vector3 {x: 38, y: 0, z: -1}
     - !Item
       name: BadGoal
       rotations: [-1, -1, -1, -1]
@@ -279,10 +278,9 @@ arenas:
       - !Vector3 {x: -1, y: 0, z: 2}
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
       positions:
-      - !Vector3 {x: 2, y: 0, z: -1}
-      - !Vector3 {x: 38, y: 0, z: -1}
+      - !Vector3 {x: -1, y: 0, z: 38}
     - !Item
       name: BadGoal
       rotations: [-1, -1, -1, -1]
@@ -310,10 +308,9 @@ arenas:
       - !Vector3 {x: -1, y: 0, z: 2}
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
       positions:
-      - !Vector3 {x: 2, y: 0, z: -1}
-      - !Vector3 {x: 38, y: 0, z: -1}
+      - !Vector3 {x: -1, y: 0, z: 38}
     - !Item
       name: BadGoal
       rotations: [-1, -1, -1, -1]
@@ -345,10 +342,9 @@ arenas:
       - !Vector3 {x: 2, y: 0, z: -1}
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
       positions:
       - !Vector3 {x: 20, y: 0, z: 20}
-      - !Vector3 {x: 38, y: 0, z: -1}
     - !Item
       name: BadGoal
       rotations: [-1, -1, -1, -1]
@@ -388,9 +384,8 @@ arenas:
       - !Vector3 {x: 20, y: 0, z: 7.5}
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
       positions:
-      - !Vector3 {x: -1, y: 1, z: -1}
       - !Vector3 {x: -1, y: 1, z: -1}
     - !Item
       name: BadGoal
@@ -441,9 +436,8 @@ arenas:
       - !Vector3 {x: 7.5, y: 0, z: 20}
     - !Item
       name: GoodGoalMulti
-      sizes: [!Vector3 {x: 1, y: 1, z: 1}, !Vector3 {x: 1, y: 1, z: 1}]
+      sizes: [!Vector3 {x: 2, y: 2, z: 2}]
       positions:
-      - !Vector3 {x: -1, y: 1, z: -1}
       - !Vector3 {x: -1, y: 1, z: -1}
     - !Item
       name: BadGoal
