--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ scripts/test_submission/.~lock.summary.csv#
 scripts/test_submission/configs/bak/*
 scripts/test_submission/test_config.1.yaml
 scripts/test_submission/_temp/*
+data/env_configs/debug.yaml
