--- a/scripts/test_submission/test_config.yaml
+++ b/scripts/test_submission/test_config.yaml
@@ -246,184 +246,184 @@
   YellowOverGreen_4.yaml:
     threshold: 1
     n_tests: 1
-# 03_obstacles:
-#   Obstacles.yaml:
-#     threshold: 0
-#     n_tests: 10
-#   objectManipulation.yaml:
-#     threshold: 0
-#     n_tests: 10
-#   ### goal on platform
-#   Goal_on_platform_1.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   Goal_on_platform_2.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   Goal_on_platform_3.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   Goal_on_platform_4.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   Goal_on_platform_5.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   Goal_on_platform_6.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   ### wall with ramp
-#   Wall_with_ramp_1.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Wall_with_ramp_2.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   ### wall with obstacle
-#   Wall_with_obstacle_1.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Wall_with_obstacle_2.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Wall_with_obstacle_3.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Wall_with_obstacle_4.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Wall_with_obstacle_5.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Wall_with_obstacle_6.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Wall_with_obstacle_7.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   ### wall with tunnel
-#   Wall_with_tunnel_1.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Wall_with_tunnel_2.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Wall_with_tunnel_3.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Wall_with_tunnel_4.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Wall_with_tunnel_5.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Wall_with_tunnel_6.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   ## wall in the middle
-#   Wall_middle.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   WallTransparent_middle_1.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   WallTransparent_middle_2.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   WallTransparent_middle_3.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   ### Navigation
-#   Navigation_1.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_2.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_3.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_4.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_5.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_6.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_7.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_8.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   ### Navigation on platform
-#   Navigation_on_platform_1.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_on_platform_2.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_on_platform_3.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_on_platform_4.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   ### Navigation on splitted arena
-#   Navigation_on_splitted_arena_1.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_on_splitted_arena_2.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_on_splitted_arena_3.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_on_splitted_arena_4.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_on_splitted_arena_5.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   ## Center blocked
-#   Center_Blocked_1.yaml:
-#     threshold: 1
-#     n_tests: 5
-#   Center_Blocked_2.yaml:
-#     threshold: 1
-#     n_tests: 5
-#   Center_Blocked_3.yaml:
-#     threshold: 1
-#     n_tests: 5
-#   Center_Blocked_4.yaml:
-#     threshold: 1
-#     n_tests: 5
-#   ## Borders blocked
-#   Borders_Blocked_1.yaml:
-#     threshold: 1
-#     n_tests: 5
-#   Borders_Blocked_2.yaml:
-#     threshold: 1
-#     n_tests: 5
+03_obstacles:
+  Obstacles.yaml:
+    threshold: 0
+    n_tests: 10
+  objectManipulation.yaml:
+    threshold: 0
+    n_tests: 10
+  ### goal on platform
+  Goal_on_platform_1.yaml:
+    threshold: 0
+    n_tests: 5
+  Goal_on_platform_2.yaml:
+    threshold: 0
+    n_tests: 5
+  Goal_on_platform_3.yaml:
+    threshold: 0
+    n_tests: 5
+  Goal_on_platform_4.yaml:
+    threshold: 0
+    n_tests: 5
+  Goal_on_platform_5.yaml:
+    threshold: 0
+    n_tests: 5
+  Goal_on_platform_6.yaml:
+    threshold: 0
+    n_tests: 5
+  ### wall with ramp
+  Wall_with_ramp_1.yaml:
+    threshold: 0
+    n_tests: 1
+  Wall_with_ramp_2.yaml:
+    threshold: 0
+    n_tests: 1
+  ### wall with obstacle
+  Wall_with_obstacle_1.yaml:
+    threshold: 0
+    n_tests: 1
+  Wall_with_obstacle_2.yaml:
+    threshold: 0
+    n_tests: 1
+  Wall_with_obstacle_3.yaml:
+    threshold: 0
+    n_tests: 1
+  Wall_with_obstacle_4.yaml:
+    threshold: 0
+    n_tests: 1
+  Wall_with_obstacle_5.yaml:
+    threshold: 0
+    n_tests: 1
+  Wall_with_obstacle_6.yaml:
+    threshold: 0
+    n_tests: 1
+  Wall_with_obstacle_7.yaml:
+    threshold: 0
+    n_tests: 1
+  ### wall with tunnel
+  Wall_with_tunnel_1.yaml:
+    threshold: 0
+    n_tests: 1
+  Wall_with_tunnel_2.yaml:
+    threshold: 0
+    n_tests: 1
+  Wall_with_tunnel_3.yaml:
+    threshold: 0
+    n_tests: 1
+  Wall_with_tunnel_4.yaml:
+    threshold: 0
+    n_tests: 1
+  Wall_with_tunnel_5.yaml:
+    threshold: 0
+    n_tests: 1
+  Wall_with_tunnel_6.yaml:
+    threshold: 0
+    n_tests: 1
+  ## wall in the middle
+  Wall_middle.yaml:
+    threshold: 0
+    n_tests: 1
+  WallTransparent_middle_1.yaml:
+    threshold: 0
+    n_tests: 1
+  WallTransparent_middle_2.yaml:
+    threshold: 0
+    n_tests: 1
+  WallTransparent_middle_3.yaml:
+    threshold: 0
+    n_tests: 1
+  ### Navigation
+  Navigation_1.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_2.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_3.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_4.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_5.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_6.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_7.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_8.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  ### Navigation on platform
+  Navigation_on_platform_1.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_on_platform_2.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_on_platform_3.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_on_platform_4.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  ### Navigation on splitted arena
+  Navigation_on_splitted_arena_1.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_on_splitted_arena_2.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_on_splitted_arena_3.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_on_splitted_arena_4.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_on_splitted_arena_5.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  ## Center blocked
+  Center_Blocked_1.yaml:
+    threshold: 1
+    n_tests: 5
+  Center_Blocked_2.yaml:
+    threshold: 1
+    n_tests: 5
+  Center_Blocked_3.yaml:
+    threshold: 1
+    n_tests: 5
+  Center_Blocked_4.yaml:
+    threshold: 1
+    n_tests: 5
+  ## Borders blocked
+  Borders_Blocked_1.yaml:
+    threshold: 1
+    n_tests: 5
+  Borders_Blocked_2.yaml:
+    threshold: 1
+    n_tests: 5
 # 04_avoidance:
 #   ### CenterMoat
 #   CenterMoat_1.yaml:
