--- a/scripts/test_submission/test_config.yaml
+++ b/scripts/test_submission/test_config.yaml
@@ -424,184 +424,184 @@
   Borders_Blocked_2.yaml:
     threshold: 1
     n_tests: 5
-# 04_avoidance:
-#   ### CenterMoat
-#   CenterMoat_1.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   CenterMoat_2.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   CenterMoat_3.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   CenterMoat_4.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   ### Ring
-#   Ring_1.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Ring_2.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Ring_3.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Ring_4.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   ### RingBlocked
-#   RingBlocked_1.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   RingBlocked_2.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   RingBlocked_3.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   RingBlocked_4.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   ### CenterMoat
-#   CenterMoatBlocked_1.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   CenterMoatBlocked_2.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   CenterMoatBlocked_3.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   CenterMoatBlocked_4.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   ### Chessboards
-#   ChessBoard_1.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   ChessBoard_2.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   ChessBoard_3.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   ChessBoard_4.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   ### Labyrinth
-#   Labyrinth_1.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   Labyrinth_2.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   Labyrinth_3.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   Labyrinth_4.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   ### Goal_in_HotZone
-#   Goal_in_HotZone_1.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Goal_in_HotZone_2.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Goal_in_HotZone_3.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   ### Goal_in_DeathZone
-#   Goal_in_DeathZone_1.yaml:
-#     threshold: -1
-#     n_tests: 1
-#   Goal_in_DeathZone_2.yaml:
-#     threshold: -1
-#     n_tests: 1
-#   Goal_in_DeathZone_3.yaml:
-#     threshold: -1
-#     n_tests: 1
-#   Goal_in_DeathZone_4.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Goal_in_DeathZone_5.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   Goal_in_DeathZone_6.yaml:
-#     threshold: 0
-#     n_tests: 1
-#   ### Goal_behind_HotZone
-#   Goal_behind_HotZone_1.yaml:
-#     threshold: -0.9
-#     n_tests: 1
-#   Goal_behind_HotZone_2.yaml:
-#     threshold: -0.9
-#     n_tests: 1
-#   Goal_behind_HotZone_3.yaml:
-#     threshold: -0.9
-#     n_tests: 1
-#   Goal_behind_HotZone_4.yaml:
-#     threshold: -0.9
-#     n_tests: 1
-#   Goal_behind_HotZone_5.yaml:
-#     threshold: -0.9
-#     n_tests: 1
-# 05_spatial_reasoning:
-#   SpatialReasoning.yaml:
-#     threshold: 1
-#     n_tests: 10
-#     partial_threshold: 0
-# 06_generalization:
-#   Generalization.yaml:
-#     threshold: 1
-#     n_tests: 10
-#     partial_threshold: 0
-#   ### navigation
-#   Navigation_1.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_2.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_3.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_4.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   ### goal on platform
-#   Goal_on_platform_1.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   Goal_on_platform_2.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   Goal_on_platform_3.yaml:
-#     threshold: 0
-#     n_tests: 5
-#   ### navigation on platform
-#   Navigation_on_platform_1.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_on_platform_2.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_on_platform_3.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
-#   Navigation_on_platform_4.yaml:
-#     threshold: 1
-#     n_tests: 5
-#     partial_threshold: 0
+04_avoidance:
+  ### CenterMoat
+  CenterMoat_1.yaml:
+    threshold: 0
+    n_tests: 1
+  CenterMoat_2.yaml:
+    threshold: 0
+    n_tests: 1
+  CenterMoat_3.yaml:
+    threshold: 0
+    n_tests: 1
+  CenterMoat_4.yaml:
+    threshold: 0
+    n_tests: 1
+  ### Ring
+  Ring_1.yaml:
+    threshold: 0
+    n_tests: 1
+  Ring_2.yaml:
+    threshold: 0
+    n_tests: 1
+  Ring_3.yaml:
+    threshold: 0
+    n_tests: 1
+  Ring_4.yaml:
+    threshold: 0
+    n_tests: 1
+  ### RingBlocked
+  RingBlocked_1.yaml:
+    threshold: 0
+    n_tests: 1
+  RingBlocked_2.yaml:
+    threshold: 0
+    n_tests: 1
+  RingBlocked_3.yaml:
+    threshold: 0
+    n_tests: 1
+  RingBlocked_4.yaml:
+    threshold: 0
+    n_tests: 1
+  ### CenterMoat
+  CenterMoatBlocked_1.yaml:
+    threshold: 0
+    n_tests: 1
+  CenterMoatBlocked_2.yaml:
+    threshold: 0
+    n_tests: 1
+  CenterMoatBlocked_3.yaml:
+    threshold: 0
+    n_tests: 1
+  CenterMoatBlocked_4.yaml:
+    threshold: 0
+    n_tests: 1
+  ### Chessboards
+  ChessBoard_1.yaml:
+    threshold: 0
+    n_tests: 5
+  ChessBoard_2.yaml:
+    threshold: 0
+    n_tests: 5
+  ChessBoard_3.yaml:
+    threshold: 0
+    n_tests: 5
+  ChessBoard_4.yaml:
+    threshold: 0
+    n_tests: 5
+  ### Labyrinth
+  Labyrinth_1.yaml:
+    threshold: 0
+    n_tests: 5
+  Labyrinth_2.yaml:
+    threshold: 0
+    n_tests: 5
+  Labyrinth_3.yaml:
+    threshold: 0
+    n_tests: 5
+  Labyrinth_4.yaml:
+    threshold: 0
+    n_tests: 5
+  ### Goal_in_HotZone
+  Goal_in_HotZone_1.yaml:
+    threshold: 0
+    n_tests: 1
+  Goal_in_HotZone_2.yaml:
+    threshold: 0
+    n_tests: 1
+  Goal_in_HotZone_3.yaml:
+    threshold: 0
+    n_tests: 1
+  ### Goal_in_DeathZone
+  Goal_in_DeathZone_1.yaml:
+    threshold: -1
+    n_tests: 1
+  Goal_in_DeathZone_2.yaml:
+    threshold: -1
+    n_tests: 1
+  Goal_in_DeathZone_3.yaml:
+    threshold: -1
+    n_tests: 1
+  Goal_in_DeathZone_4.yaml:
+    threshold: 0
+    n_tests: 1
+  Goal_in_DeathZone_5.yaml:
+    threshold: 0
+    n_tests: 1
+  Goal_in_DeathZone_6.yaml:
+    threshold: 0
+    n_tests: 1
+  ### Goal_behind_HotZone
+  Goal_behind_HotZone_1.yaml:
+    threshold: -0.9
+    n_tests: 1
+  Goal_behind_HotZone_2.yaml:
+    threshold: -0.9
+    n_tests: 1
+  Goal_behind_HotZone_3.yaml:
+    threshold: -0.9
+    n_tests: 1
+  Goal_behind_HotZone_4.yaml:
+    threshold: -0.9
+    n_tests: 1
+  Goal_behind_HotZone_5.yaml:
+    threshold: -0.9
+    n_tests: 1
+05_spatial_reasoning:
+  SpatialReasoning.yaml:
+    threshold: 1
+    n_tests: 10
+    partial_threshold: 0
+06_generalization:
+  Generalization.yaml:
+    threshold: 1
+    n_tests: 10
+    partial_threshold: 0
+  ### navigation
+  Navigation_1.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_2.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_3.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_4.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  ### goal on platform
+  Goal_on_platform_1.yaml:
+    threshold: 0
+    n_tests: 5
+  Goal_on_platform_2.yaml:
+    threshold: 0
+    n_tests: 5
+  Goal_on_platform_3.yaml:
+    threshold: 0
+    n_tests: 5
+  ### navigation on platform
+  Navigation_on_platform_1.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_on_platform_2.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_on_platform_3.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
+  Navigation_on_platform_4.yaml:
+    threshold: 1
+    n_tests: 5
+    partial_threshold: 0
 # 07_internal_memory:
 #   InternalMemory_1.yaml:
 #     threshold: 0
